--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -11,9 +11,14 @@
         <div>
           <p><%= micropost.content %></p>
         </div>
-        <div>
+        <div class="row">
+          <div class="col-sx-1 col-sm-1 col-md-1 col-lg-1">
+            <%= render 'favorites/favorite_button', micropost: micropost %>
+          </div>      
           <% if current_user == micropost.user %>
-            <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
+            <div class="col-sx-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 col-sx-1 col-sm-1 col-md-1 col-lg-1">
+              <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
+            </div>
           <% end %>
         </div>
       </div>
